{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 14,
  "lineage": "4db7c904-788f-35e3-4345-84d7795cea10",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "proxysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aef57767f5404a3c",
            "arn": "arn:aws:ec2:eu-west-1:016230046494:instance/i-0fe2522a8c96be937",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe2522a8c96be937",
            "instance_state": "running",
            "instance_type": "t3a.nano",
            "ipv6_address_count": 0,
            "key_name": "proxysql_pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0912ed808e8fe280b",
            "private_dns": "ip-172-31-29-202.eu-west-1.compute.internal",
            "private_ip": "172.31.29.202",
            "public_dns": "ec2-54-74-242-109.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.74.242.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-072e411b9eb00b870",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "proxysql"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-a135ded7",
            "tags": {
              "Name": "proxysql"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0724e335c3ff5a350"
            ]
          },
          "dependencies": [
            "aws_key_pair.pem-key",
            "aws_security_group.proxysql_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aef57767f5404a3c",
            "arn": "arn:aws:ec2:eu-west-1:016230046494:instance/i-03d30ebc5a545c4d3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03d30ebc5a545c4d3",
            "instance_state": "running",
            "instance_type": "t3a.nano",
            "ipv6_address_count": 0,
            "key_name": "proxysql_pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b206dcf88bf07754",
            "private_dns": "ip-172-31-20-2.eu-west-1.compute.internal",
            "private_ip": "172.31.20.2",
            "public_dns": "ec2-34-251-171-205.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.251.171.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fbd80e68ca38d1d5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "webserver"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-a135ded7",
            "tags": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-039ef0717e0b82f8c"
            ]
          },
          "dependencies": [
            "aws_key_pair.pem-key",
            "aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "proxysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:016230046494:security-group/sg-0724e335c3ff5a350",
            "description": "proxysql security group",
            "egress": [],
            "id": "sg-0724e335c3ff5a350",
            "ingress": [],
            "name": "proxysql",
            "name_prefix": "",
            "owner_id": "016230046494",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "proxysql_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-e8bfa78d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:016230046494:security-group/sg-039ef0717e0b82f8c",
            "description": "webserver security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all out",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-039ef0717e0b82f8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "35.174.71.212/32"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "webserver",
            "name_prefix": "",
            "owner_id": "016230046494",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-e8bfa78d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "webserver_egress_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all out",
            "from_port": 0,
            "id": "sgrule-3341907530",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-039ef0717e0b82f8c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "webserver_ingress_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "35.174.71.212/32"
            ],
            "description": "SSH access",
            "from_port": 22,
            "id": "sgrule-4251141236",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-039ef0717e0b82f8c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.webserver_sg"
          ]
        }
      ]
    }
  ]
}